# colors

./: .editorconfig  README.md  meson.build
data/: Application.css  com.github.btkostner.colors.gschema.xml  css.gresource.xml
src/: Application.vala  Color.vala  ColorTile.vala  MainWindow.vala
